# agents-environment-config

./: .env.example  .env.template  .gitignore  .gitmodules  AGENTINFO.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  QWEN.md  README.md  agents.json  pyproject.toml
.agent-rules/: CURSOR.md
.agent-rules/general/: architecture.md  decision-autonomy.md  development-workflow.md  documentation.md  leave-it-better.md  no-patch-fixes.md  plans-checklists.md  port-management.md  project-setup-cli.md  rules-about-rules.md  security.md
.claude/: statusline-command.sh  statusline.sh
.claude-code-router/: config.json
.claude-plugin/: marketplace.json
.claude/hooks/: session-start.sh
.codex/: config.toml
.cursor/: mcp.json
.cursor/commands/: design-ui-designer.md  documentation-customer.md  engineering-backend-architect.md  product-sprint-prioritizer.md  project-management-project-shepherd.md
.cursor/rules/: README.mdc
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  cli-error.md  config.yml  feature_request.md  new_agent_support.md
.github/workflows/: ci.yml  version-bump.yml
.qwen/: settings.json
aec/: __init__.py  __main__.py  cli.py
aec/commands/: __init__.py  agent_tools.py  apply_cmd.py  config_cmd.py  configure_agent.py  deprecation.py  discover.py  discover_catalog.py  doctor.py  export_cmd.py  files.py  generate.py  hooks_cmd.py  info.py  install.py  install_cmd.py  list_cmd.py  org.py  outdated.py  ports.py  preferences.py  repo.py  rules.py  run_script_cmd.py  search.py  setup.py  skills.py  test_cmd.py  test_detect_impl.py  uninstall.py  untrack.py  update.py  upgrade.py
aec/lib/: __init__.py  aec_json.py  agent_files.py  backup.py  (+47 more)
docs/: adding-agent-support.md  agent-skill-sync-system.md  qa-verification.md
plans/: ROADMAP.md  gdocs-table-manipulation-RESUME.md  gdocs-table-manipulation.plan.md  ui-audit-skill-command.plan.md
raycast_scripts/: cleanup-hung-processes.sh  setup-repo.sh  sync-cursor-commands.sh
scripts/: _agent-config.sh  audit-project-rules.py  cleanup-hung-processes.ps1  cleanup-hung-processes.sh  generate-agent-config.py  generate-agent-files.py  generate-agent-rules.py  generate-removal-script-safe.py  generate-removal-script.py  init-aec-home.sh  install-git-hooks.sh  migrate-to-agent-tools.sh  migrate_ports.py  push-submodules.sh  remove-duplicate-rules.sh  rollback-agent-tools.sh  setup-agent-tools.sh  setup-repo.sh  setup.sh  sync-agents-skills.py  sync-config.json  test-agent-tools-setup.sh  update-catalog-hashes.py  validate-rule-parity.py  verify-dry-run.py
templates/: AGENTINFO.md  AGENTS.md  CLAUDE.md  GEMINI.md  QWEN.md
tests/: __init__.py  conftest.py  test_aec_json.py  test_aec_json_prerequisites.py  test_agents.py  test_apply_core.py  test_atomic_write.py  test_backup.py  test_catalog_hashes.py  test_catalog_hashes_hook.py  test_cli.py  test_cli_v2.py  test_config.py  test_config_cmd.py  test_console_sections.py  test_dep_approval_prompt.py  test_deprecation.py  test_discover.py  test_discover_catalog_cmd.py  test_discovery_hooks.py  test_discovery_preference.py  test_dismissals.py  test_doctor_cmd.py  test_dry_run.py  test_export_apply_e2e.py  test_files.py  test_filesystem.py  test_global_install_prompt.py  test_home_dir_paths.py  test_hooks.py  test_hooks_cli.py  test_hooks_dormant.py  test_hooks_drift.py  test_hooks_fingerprint.py  test_hooks_git_blocks.py  test_hooks_git_hooks_path.py  test_hooks_installer.py  test_hooks_installer_merge.py  test_hooks_lifecycle.py  test_hooks_predicates.py  (+62 more)
(+569 files in other folders)
