[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aec"
version = "2.39.3"
description = "Agents Environment Configuration - Cross-platform AI agent setup CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["ai", "agents", "cli", "configuration", "claude", "cursor"]

dependencies = []

[project.optional-dependencies]
dev = [
    "typer>=0.9.0",
    "typing_extensions>=4.0",
    "PyYAML>=6.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
]
org-configs-preview = [
    "PyYAML>=6.0",
]
org-configs = [
    "PyYAML>=6.0",
    # Supply-chain policy: hold pynacl at least one release AND three weeks
    # behind the latest PyPI release, with no known CVEs in the pinned version
    # (exception: a known-good security patch). Re-check OSV / pip-audit before
    # bumping. Latest at pin time was 1.6.2; 1.5.0 is the long-stable, widely
    # deployed release with abi3 wheels for macOS arm64/x86_64 + Linux x86_64.
    "pynacl==1.5.0",
]

[project.scripts]
aec = "aec.cli:main"

[project.urls]
Homepage = "https://github.com/bernierllc/agents-environment-config"
Repository = "https://github.com/bernierllc/agents-environment-config"

[tool.setuptools.packages.find]
include = ["aec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=aec",
    "--cov-report=term-missing",
    "--cov-fail-under=65",
]

[tool.coverage.run]
source = ["aec"]
branch = true
omit = [
    "aec/__main__.py",
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
